--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -654,7 +654,8 @@ img {
 /*==================== SERVICES ====================*/
 .services__container {
   gap: 1.5rem;
-  grid-template-columns: repeat(2, 1fr);
+  width: 50%;
+  margin-left: 25%;
 }
 
 .services__content {
@@ -1298,7 +1299,8 @@ img {
     transform: translateX(-6rem);
   }
   .services__container {
-    grid-template-columns: repeat(3, 238px);
+    width: 100%;
+    margin-left: 41%;
   }
   .portfolio__content {
     column-gap: 5rem;
